提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -298,5 +298,97 @@ class Solution {
 
 
 
+5.16每日一题
+![image-20220516115426741](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220516115426741.png)
 
+最近才学了二叉树的前序，中序，后序遍历，那就用中序遍历的方法找到后继节点。
+
+习惯这种数组形式的node，其实和普通的node是一样的
+
+第一次提交
+
+```java
+import java.util.Stack;
+
+class Solution {
+    public static TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        TreeNode cur=root;
+        TreeNode pre=null;
+        if(root!=null){
+            Stack<TreeNode> stack=new Stack<>();
+            stack.push(cur);
+            while(cur.left!=null){
+                cur=cur.left;
+                stack.push(cur);
+            }
+            cur=null;
+            while(!stack.isEmpty()){
+                pre=cur;
+                cur=stack.pop();
+                if(pre==p){
+                    return cur;
+                }
+                if(cur.right!=null){
+                    stack.push(cur.right);
+                }
+            }
+            return null;
+        }
+        return null;
+    }
+```
+
+
+
+![image-20220516122626262](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220516122626262.png)
+
+这里有点问题啊,两个while循环被割裂开了，我要做的是把每一棵树的左节点都放入栈，我这里只把最大的树的左节点放入了栈，所以一定出问题
+
+
+
+第二次提交
+
+很聪明的让cur.left的加入和cur.right的加入在一个while循环中进行
+
+很聪明的加入了count元素，让pre在第一次等于Null，后面均等于cur，然鹅还是出错，我服了。
+
+```java
+import java.util.Stack;
+
+class Solution {
+    public static TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        TreeNode cur=root;
+        TreeNode pre=null;
+        int count=0;
+        if(root!=null){
+            Stack<TreeNode> stack=new Stack<>();
+            stack.push(cur);
+            while(!stack.isEmpty()) {
+                if (cur.left != null) {
+                    cur = cur.left;
+                    stack.push(cur);
+                } else {
+                    if(count==0){
+                        pre=null;
+                        count++;
+                    }else {
+                        pre=cur;
+                    }
+                        cur = stack.pop();
+                        if (pre == p) {
+                            return cur;
+                        }
+                        if (cur.right != null) {
+                            stack.push(cur.right);
+                        }
+
+                }
+
+            }
+            return null;
+        }
+        return null;
+    }
+}
+```
 
