提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -392,3 +392,4 @@ class Solution {
 }
 ```
 
+![image-20220516130046045](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220516130046045.png)
