提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -393,3 +393,45 @@ class Solution {
 ```
 
 ![image-20220516130046045](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220516130046045.png)
+
+
+
+正确答案
+
+```java
+class Solution {
+    public TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        Deque<TreeNode> stack = new ArrayDeque<TreeNode>();
+        TreeNode prev = null, curr = root;
+        while (!stack.isEmpty() || curr != null) {
+            while (curr != null) {
+                stack.push(curr);
+                curr = curr.left;
+            }
+            curr = stack.pop();
+            if (prev == p) {
+                return curr;
+            }
+            prev = curr;
+            curr = curr.right;
+        }
+        return null;
+    }
+}
+```
+
+当然，由于题目上给了是一个BST，所以可以直接使用BST的性质
+
+```java
+class Solution {
+    public TreeNode inorderSuccessor(TreeNode root, TreeNode p) {
+        //递归终止条件
+        if (root == null) return null;
+        //root值小于等于p直接去右边root找
+        if (root.val <= p.val) return inorderSuccessor(root.right, p);
+        TreeNode ans = inorderSuccessor(root.left, p);
+        return ans == null ? root : ans;
+    }
+}
+```
+
