提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -197,3 +197,21 @@ public static void levelOrderTraveral(TreeNode head){
 
 关键是记录哪些节点是同一层级，使用hashmap记录
 
+也可以不使用hashmap
+
+5.判断一颗二叉树是否是一颗二叉搜索树
+
+可以使用栈，也可以使用递归，也可以使用树形dp套路
+
+6.判断一颗二叉树是否是一颗完全二叉树
+
+使用层序遍历，满足2个条件1.若出现有右孩子无左孩子的情况直接返回false.2.在1的条件下若出现只有一个孩子，但它后面出现非叶子结点的情况下返回false.
+
+7.判断一颗二叉树是否是满二叉树
+
+树形dp套路
+
+8.判断一颗二叉树是否是平衡二叉树
+
+
+
