提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -1,4 +1,4 @@
-链表
+### 链表
 
 题目:
 
@@ -10,7 +10,7 @@
 
 2.2个链表可能有环可能无环，判断两个链表是非相交，若相交则返回相交结点，否则返回null
 
-二叉树
+### 二叉树
 
 题目:
 
@@ -203,13 +203,154 @@ public static void levelOrderTraveral(TreeNode head){
 
 可以使用栈，也可以使用递归，也可以使用树形dp套路
 
+递归动态判断
+
+```java
+    //判断是否是二叉搜索树，使用递归动态判断
+    public static int preValue=Integer.MIN_VALUE;
+    public static boolean checkBST(TreeNode head){
+        if(head==null){
+            return true;
+        }
+        boolean isLeftBst=checkBST(head.leftChild);
+        if(!isLeftBst){
+            return false;
+        }
+        if(head.value<=preValue){
+            return false;
+        }else {
+            preValue=head.value;
+        }
+        return checkBST(head.rightChild);
+    }
+```
+
+递归+数组储存每一个结点
+
+```java
+//判断是否为二叉搜索树,使用递归+数组储存实现
+public static  boolean checkBST2(TreeNode head){
+    boolean flag=true;
+    List<TreeNode> list = new LinkedList<>();
+    process(head,list);
+    //遍历判断数组，判断是否是升序的.
+    for (int i = 0; i < list.size(); i++) {
+        if(list.get(i).value>=list.get(i+1).value){
+            flag=false;
+        }
+    }
+    return flag;
+}
+//递归将中序遍历数据存在数组中
+public static void process(TreeNode head,List<TreeNode> inOrderList){
+    if(head ==null){
+        return;
+    }
+    process(head.leftChild,inOrderList);
+    inOrderList.add(head);
+    process(head.rightChild,inOrderList);
+}
+```
+
+非递归的方式
+
+```java
+//使用非递归的方式将
+public static boolean checkBST3(TreeNode head) {
+    if (head != null) {
+        int pre=Integer.MIN_VALUE;
+        Stack<TreeNode> stack = new Stack<>();
+        while (head != null || !stack.isEmpty()) {
+            if (head != null) {
+                stack.push(head);
+                head = head.leftChild;
+            } else {
+                head = stack.pop();
+                //中间是中序遍历的时候，更改代码实现逻辑
+                if(head.value<=preValue){
+                    return false;
+                }else {
+                    preValue=head.value;
+                }
+                head = head.rightChild;
+            }
+        }
+    }
+    return true;
+}
+```
+
 6.判断一颗二叉树是否是一颗完全二叉树
 
 使用层序遍历，满足2个条件1.若出现有右孩子无左孩子的情况直接返回false.2.在1的条件下若出现只有一个孩子，但它后面出现非叶子结点的情况下返回false.
 
+```java
+//判断是否是完全二叉树
+public static boolean checkCBT(TreeNode head){
+    if(head!=null){
+        boolean flag=false;
+        Queue<TreeNode> queue =new LinkedList<TreeNode>();
+        queue.add(head);
+        while(!queue.isEmpty()){
+            head=queue.poll();
+            if(head.leftChild==null&& head.rightChild!=null) {
+                return false;
+            }
+            if(head.rightChild==null){
+                flag=true;
+            }
+            if(flag && (head.leftChild!=null || head.rightChild!=null)){
+                return false;
+            }
+            if(head.leftChild!=null){
+                head=head.leftChild;
+            }
+            if(head.rightChild!=null){
+                head=head.rightChild;
+            }
+        }
+        return false;//循环结束仍然接受住考验则返回true
+    }
+    return true;//root为null直接返回true
+}
+```
+
 7.判断一颗二叉树是否是满二叉树
 
 树形dp套路
+
+```java
+//判断是否为满二叉树
+
+public static boolean checkFBT(TreeNode head){
+    if(head==null){
+        return true;
+    }
+    Info info = process(head);
+    if(info.nodes ==1<<info.height-1){
+        return true;
+    }
+    return false;
+};
+public static Info process(TreeNode head){
+    //别忘记这一行代码,是递归结束的必要条件
+    if(head==null){
+        return new Info(0,0);
+    }
+    Info leftInfo=process(head.leftChild);
+    Info rightInfo=process(head.rightChild);
+    int h=Math.max(leftInfo.height,rightInfo.height)+1;
+    int nodes=leftInfo.nodes+rightInfo.nodes+1;
+    return new Info(h,nodes);
+}
+class Info{
+    int height;
+    int nodes;
+    public Info(int h,int nodes){
+        this.height=h;
+        this.nodes=nodes;
+    }
+```
 
 8.判断一颗二叉树是否是平衡二叉树
 
