提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -354,5 +354,59 @@ class Info{
 
 8.判断一颗二叉树是否是平衡二叉树
 
+9.寻找两个结点的最低公共祖先结点
+
+```java
+//寻找两个结点的最低公共祖先结点,使用哈希表
+public static TreeNode lowestCommonAncestor(TreeNode head,TreeNode o1,TreeNode o2){
+    HashMap<TreeNode, TreeNode> fatherMap = new HashMap<>();
+    process3(head,fatherMap);
+    HashSet<TreeNode> set = new HashSet<>();
+    TreeNode cur=o1;
+    //在cur不为头结点的情况下让o1向上穿,循环结束后除了头结点head均放入了set
+    while(cur!=fatherMap.get(cur)){
+        set.add(cur);
+        cur=fatherMap.get(cur);
+    }
+    set.add(head);
+    cur=o2;
+    //cur指向o2，不断变成自己的父节点,每一次变都会判断其是否在set中存在,若循环结束仍然不存在,说明头结点是最低公共祖先
+    while(cur!=fatherMap.get(cur)){
+        if(set.contains(cur)){
+            return cur;
+        }
+        cur=fatherMap.get(cur);
+    }
+    return head;
+}
+public static void process3(TreeNode head,HashMap<TreeNode,TreeNode> fatherMap){
+    if(head==null){//basecase
+        return;
+    }
+    fatherMap.put(head.leftChild,head);
+    fatherMap.put(head.rightChild,head);
+    process3(head.leftChild,fatherMap);
+    process3(head.rightChild,fatherMap);
+}
+```
 
 
+
+```java
+//寻找两个结点的最低公共祖先,使用递归动态判断
+public static TreeNode lowestCommonAncestor2(TreeNode head,TreeNode o1,TreeNode o2){
+    //base case
+    if(head==null||head==o1||head==o2){
+        return head;
+    }
+    //在左树上寻找
+    TreeNode left=lowestCommonAncestor2(head.leftChild,o1,o2);
+    TreeNode right=lowestCommonAncestor2(head.rightChild,o1,o2);
+    if(left==null&&right==null){
+        return head;
+    }
+    //左右有一个不为空的情况返回不为空的那一个()
+    return left!=null?left:right;
+    
+}
+```
