提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -410,3 +410,89 @@ public static TreeNode lowestCommonAncestor2(TreeNode head,TreeNode o1,TreeNode 
     
 }
 ```
+
+寻找一个结点的后继结点,假设结点中有parent属性
+
+![image-20220517182400062](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220517182400062.png)
+
+
+
+二叉树的序列化，反序列化
+
+序列化
+
+```java
+//递归实现二叉树的序列化
+public static String serialByPre(TreeNode head){
+    if(head==null){
+        return "#_";
+    }
+    String res=head.value+"_";
+    res+=serialByPre(head.leftChild);
+    res+=serialByPre(head.rightChild);
+    return res;
+}
+```
+
+![image-20220517182544183](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220517182544183.png)
+
+
+
+反序列化
+
+```java
+//层序遍历实现二叉树的反序列化
+public static TreeNode reconByPreString(String preStr){
+    String[]values=preStr.split(",");
+    Queue<String> queue = new LinkedList<>();
+    for (int i = 0; i < values.length; i++) {
+        queue.add(values[i]);
+    }
+    return reconPreOrder(queue);
+}
+public static TreeNode reconPreOrder(Queue<String> queue){
+    String value=queue.poll();
+    if(value.equals("#")){
+        return null;
+    }
+    TreeNode head=new TreeNode(Integer.parseInt(value));
+    head.leftChild=reconPreOrder(queue);
+    head.rightChild=reconPreOrder(queue);
+    return head;
+}
+```
+
+微软原题
+
+打印折痕
+
+```java
+//微软原题,折纸问题，抽象为一颗二叉树
+public static void printProcess(int n){
+    process(0,n,true);
+}
+public static void process(int i,int n,boolean down){
+    if(i>n){
+        return;
+    }
+    process(i+1,n,true);
+    System.out.println(down?"凹":"凸");
+    process(i+1,n,false);
+}
+```
+
+### 图
+
+图的基本结构
+
+
+
+将其他形式的图转化为我们熟悉的图
+
+
+
+图的广度优先遍历
+
+
+
+图的深度优先遍历 (dfs)
