--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -435,3 +435,38 @@ class Solution {
 }
 ```
 
+5.19
+
+状态dp问题:
+
+打家劫舍1
+
+![image-20220518001321249](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001321249.png)
+
+打家劫舍2
+
+![image-20220518001350161](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001350161.png)
+
+打家劫舍3(树形dp)
+
+![image-20220518001433874](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001433874.png)
+
+
+
+贪心算法:
+
+跳跃游戏
+
+![image-20220518001512559](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001512559.png)
+
+零钱兑换
+
+![image-20220518001541649](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001541649.png)
+
+
+
+前缀和问题:
+
+相同元素的间隔之和
+
+![image-20220518001613498](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001613498.png)
