提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -485,14 +485,158 @@ public static void process(int i,int n,boolean down){
 
 图的基本结构
 
+```java
+import java.util.HashMap;
+import java.util.HashSet;
 
+public class Graph {
+    HashMap<Integer,Node>Nodes;
+    HashSet<edge>edges;
+
+    public Graph() {
+    }
+}
+```
+
+点的基本结构
+
+```java
+import java.util.ArrayList;
+
+public class Node {
+    public int value;//值
+    public int in;//入度
+    public int out;//出度
+    public ArrayList<Node>nexts;//下一个点
+    public ArrayList<edge>edges;//边
+
+    public Node(int value, int in, int out) {
+        this.value = value;
+        this.in = in;
+        this.out = out;
+    }
+}
+```
+
+边的基本结构
+
+```java
+public class edge {
+    int weight;//权重
+    Node from;//从某个点来
+    Node to;//到某个点去
+
+    public edge(int weight, Node from, Node to) {
+        this.weight = weight;
+        this.from = from;
+        this.to = to;
+    }
+}
+```
 
 将其他形式的图转化为我们熟悉的图
 
 
 
-图的广度优先遍历
+图的广度优先遍历(bfs)
+
+```java
+//宽度优先遍历(队列实现,set维护)
+public static void bfs(Node node){
+    Queue<Node> queue = new LinkedList<>();
+    HashSet<Node> set = new HashSet<>();
+    queue.add(node);
+    set.add(node);
+    while(!queue.isEmpty()){
+        //开始统一处理
+        Node cur=queue.poll();
+        //处理cur
+        System.out.println(cur.value);
+        //将所有宽度放入队列最后统一处理
+        for(Node next:cur.nexts){
+            if(!set.contains(next)){
+                queue.add(next);
+                set.add(next);
+            }
+        }
+    }
+}
+```
 
 
 
 图的深度优先遍历 (dfs)
+
+```java
+public static void dfs(Node node){
+    if (node==null){
+        return;
+    }
+    Stack<Node> stack = new Stack<>();
+    HashSet<Node> set = new HashSet<>();//新建一个hashset动态维护保证每一个结点仅出现一次
+    Node cur=node;
+    stack.push(cur);
+    set.add(cur);
+    System.out.println(cur);
+    while(!stack.isEmpty()){
+        cur=stack.pop();
+        for (Node next:cur.nexts) {
+            if (!set.contains(next)) {
+                stack.push(cur);
+                stack.push(next);
+                set.add(next) ;
+                //处理这个邻居
+                System.out.println(next.value);
+                //把邻居加进去后就不看A后面的结点了
+                break;
+            }
+        }
+    }
+}
+```
+
+图的拓扑排序
+
+概念:
+
+在图论中，**拓扑排序（Topological Sorting**）是一个有向无环图（DAG, Directed Acyclic Graph）的所有顶点的线性序列。且该序列必须满足下面两个条件：
+
+1. 每个顶点出现且只出现一次。
+2. 若存在一条从顶点 A 到顶点 B 的路径，那么在序列中顶点 A 出现在顶点 B 的前面。
+
+有向无环图（DAG）才有拓扑排序，非DAG图没有拓扑排序一说。
+
+方法:
+
+如果图中一个结点的入度为零，则将其本身以及对后继节点的影响擦去，并将其放入数组之中.
+
+实现
+
+```java
+//拓扑排序
+public static List<Node> sortedTopology(Graph graph) {
+    HashMap<Node, Integer> inMap = new HashMap<>();//储存每一个节点的入度
+    Queue<Node> zeroQueue = new LinkedList<>();//储存每一个入度为零的结点
+    //将每一个结点的入度存入hashmap
+    for(Node node:graph.Nodes.values()){
+            inMap.put(node,node.in);
+            if(node.in==0){
+                zeroQueue.add(node);
+            }
+    }
+    //将拓扑排序的结果加入到结果集中
+    LinkedList<Node> result = new LinkedList<>();
+    while(!zeroQueue.isEmpty()){
+        Node cur=zeroQueue.poll();
+        result.add(cur);
+        //擦除其对后继节点的影响
+        for(Node next:cur.nexts) {
+            inMap.put(next, cur.in - 1);
+            if(next.in==0){
+                zeroQueue.add(next);
+            }
+        }
+    }
+    return result;
+}
+```
