提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -540,6 +540,8 @@ public class edge {
 
 图的广度优先遍历(bfs)
 
+使用queue实现,使用一个hashset注册机制，维护每一个结点只在queue中出现一次
+
 ```java
 //宽度优先遍历(队列实现,set维护)
 public static void bfs(Node node){
@@ -640,3 +642,79 @@ public static List<Node> sortedTopology(Graph graph) {
     return result;
 }
 ```
+
+
+
+kruskal算法(k算法)
+
+要求无向图
+
+生成最小生成树
+
+保证连通性的情况下让权重总和最小
+
+基于并查集的贪心算法
+
+依次把最小的边加上看有没有形成环，若会形成环则不加
+
+如何考察加上一个边的时候会不会形成环?使用并查集实现某种机制实现集合查询和集合合并。
+
+并查集后面讲(实现复杂度为常数级别)，这里我们实现一个简单的和并查集有相似功能的集合
+
+```java
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+
+public class MySets {
+    //hashMap记录每一个结点的集合
+    public HashMap<Node, List<Node>> setMap;
+    public MySets(List<Node> nodes){
+        for(Node cur:nodes){
+            List<Node> set = new ArrayList<>();
+            set.add(cur);
+            setMap.put(cur,set);
+        }
+    }
+    //判断2个点是否在同一个集合中
+    public boolean isSameSet(Node from,Node to){
+        List<Node> fromSet = setMap.get(from);
+        List<Node> toSet = setMap.get(to);
+        return fromSet==toSet;
+    }
+    //把from的集合和to的集合合并为一个集合
+    public void union(Node from,Node to){
+        List<Node> fromSet = setMap.get(from);
+        List<Node> toSet = setMap.get(to);
+        //把to中的所有Node加入到fromset,把所有结点在map中的记录指向fromset
+        for(Node cur:toSet){
+            fromSet.add(cur);
+            setMap.put(cur,fromSet);
+        }
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+prim算法(p算法)
+
+要求无向图
+
+生成最小生成树
+
+保证连通性的情况下让权重总和最小
