提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -435,7 +435,7 @@ class Solution {
 }
 ```
 
-5.19
+5.17
 
 状态dp问题:
 
@@ -470,3 +470,47 @@ class Solution {
 相同元素的间隔之和
 
 ![image-20220518001613498](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220518001613498.png)
+
+5.18
+
+![image-20220519221123673](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220519221123673.png)
+
+简单做法:
+
+使用贪心策略知这个数中位数时最小
+
+```java
+public int minMoves2(int[] nums) {
+    Arrays.sort(nums);
+    int n=nums.length;
+    int mid=(n-1)/2;
+    int ans=0;
+    for (int i = 0; i < n; i++) {
+        ans+=Math.abs(nums[i]-nums[mid]);
+    }
+    return ans;
+}
+```
+
+优化:
+
+快速选择使事件复杂度进一步减小,用于解决topk问题
+
+
+
+
+
+215 数组中第k大的元素
+![image-20220519221404241](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220519221404241.png)
+
+法一:维护一个堆
+
+因为要求第k大的元素，我们可以维护一个容量大小为k的堆,堆顶元素就是第k大的元素
+
+法二:快速选择
+
+对于动态数据流只能使用堆排序
+
+核心思想是随机选择一个轴值，对于小于该轴值的数放在轴值左边，大于该轴值的数放在轴值右边,然后根据k和轴值的关系
+
+平均时间复杂度on 
