提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -738,3 +738,243 @@ prim算法(p算法)
 生成最小生成树
 
 保证连通性的情况下让权重总和最小
+
+### 前缀树
+
+TrieNode结构
+
+```java
+public class TrieNode {
+    public int pass;//记录前缀为该结点的字符串结尾的字符串数目
+    public int end;//记录以该节点作为结尾的字符串数目
+    public TrieNode[] nexts;//记录该结点的下一个结点
+    public TrieNode(){
+        pass=0;
+        end=0;
+        nexts=new TrieNode[26];//储存26个字母
+    }
+
+}
+```
+
+Trie结构
+
+```java
+import java.util.HashMap;
+
+public class Trie {
+    public TrieNode root;
+    public Trie(){
+        root=new TrieNode();
+    }
+    //插入一个字符串
+    public void insert(String word){
+        if(word==null){
+            return;
+        }
+        char[] chars = word.toCharArray();
+        TrieNode node=root;//引入一个临时的node结点
+        for(char chr:chars){
+
+            int index=chr-'a';
+            if(node.nexts[index]==null) {
+                node.nexts[index] = new TrieNode();
+            }
+            node=node.nexts[index];
+            node.pass++;
+        }
+        node.end++;//循环结束后说明来到了字符串的结尾
+    }
+    //删除一个字符串
+    public void delete(String word){
+        if(word==null||search(word)==0){
+            return;
+        }
+        char[] chars = word.toCharArray();
+        TrieNode node=root;
+        for(char chr:chars){
+            node.pass-=1;
+            int index=chr-'a';
+            node=node.nexts[index];
+        }
+        node.end--;//遍历结束后来到了结尾
+        if(node.pass==0){
+            node.nexts=null;
+        }//注意，需要把end==0的next给gc调
+
+    }
+    //查询以一个字符串为前缀的单词的个数
+    public int prefixNumber(String pre){
+        if(pre==null){
+            return 0;
+        }
+        char[]chars=pre.toCharArray();
+        int num=0;
+        TrieNode node=root;
+        for(char chr :chars){
+            int index=chr-'a';
+            node=node.nexts[index];
+        }
+        num=node.pass;//循环结束后说明来到了结尾
+        return num;
+    }
+    //查询一个字符串的个数
+    public int search(String word){
+        if(word==null){
+            return 0;
+        }
+        char[]chars=word.toCharArray();
+        int num=0;
+        TrieNode node=root;
+        for(char chr :chars){
+            int index=chr-'a';
+            node=node.nexts[index];
+        }
+        //循环结束后说明来到了结尾
+        num=node.end;
+        return num;
+    }
+
+}
+
+```
+
+### 贪心算法
+
+贪心算法最常用的方式:
+
+1.构造一个比较器对数组进行排序
+
+注意:排序策略必须要有传递性，否则无意义
+
+2.构造堆结构
+
+题目
+
+1.一块金条切成两块,是需要花费与长度一样的铜板的,比如长度为20的金条,不管切成长度多大的两半，都要花费20个金条。
+
+一群人想整分整块金条，怎么分最省铜板?输入一个数组，返回分割的最小代价.
+
+例如:给定数组[10,20,30]，代表一共三个人，整块金条的长度为10+20+30=60.把金条分成10,20,30三个部分
+
+经典哈夫曼编码问题
+
+思路:
+
+我们逆向思维，让最后分割后的金条，任意两两组合，设置一个贪心策略让两两组合的金条总长度最小.
+
+
+
+
+
+2.会议问题:
+
+一些项目要占用一个会议室宣讲，会议室不能同时容纳两个项目的宣讲，给你每一个项目的开始的时间和结束的时间(给你一个数组，里面是一个个具体的项目)，你来安排宣讲的日程，要求会议室进行宣讲的场次最多，返回这个最多的宣讲场次
+
+思路:我们先想出一个贪心策略:哪个会议的结束时间早就优先安排谁
+
+```java
+public static class program{
+    public int start;
+    public int end;
+    public program(int start, int end) {
+        this.start = start;
+        this.end = end;
+    }
+}
+public static class ProgramComparator implements Comparator<program>{
+    @Override
+    public int compare(program o1, program o2) {
+        return o1.end -o2.end;//让会议结束时间最早的放在数组前面
+    }
+}
+//timePoint表示会议开始的时间
+public static int bestArrange(program[]programs,int timePoint){
+    Arrays.sort(programs,new ProgramComparator());
+    int result=0;//代表安排的会议数目
+    for(program prg :programs){
+        //如果时间点比会议开始时间早就安排它,并让时间点推后
+        if(timePoint<prg.start){
+            result++;
+            timePoint=prg.end;
+        }
+        //否则就直接跳过它直接什么都不写
+    }
+    return result;
+}
+```
+
+3.字典序问题
+
+输入一个数组，放的是很多个字符串，请你将这些字符串拼接为一个字符串并且该字符串的字典序比其它字符串的字典序小.
+
+第一种贪心策略:
+
+把所有的字符串按字典序进行排序,然后从前到后进行拼接:
+
+举出反例不对如"b"和"ba"输出:"bba"预期"bab"
+
+第二种贪心策略:
+
+将两个参数字符串进行拼接，若ba<ab，则把b放在前面，否则把a放在前面.
+
+实现:java中有compareTo方法，比较的就是两个字符串的字典序大小
+
+```java
+public static class Mycomparator implements Comparator<String>{
+    @Override
+    public int compare(String o1, String o2) {
+        return  (o1+o2).compareTo(o2+o1);
+    }
+}
+public static String lowestLexicography(String[]strs){
+    Arrays.sort(strs,new Mycomparator());
+    String ans="";
+    for (String str :strs){
+        ans+=str;
+    }
+    return ans;
+}
+```
+
+4.公司创业:
+
+输入正数数组costs
+
+正数数组profiles
+
+正数k
+
+正数m
+
+含义:
+
+costs[i]表示i号项目的花费
+
+profile[i]表示i号项目的利润
+
+k表示你只能串行的执行k个项目
+
+m表示你初始的资金
+
+返回最大利润数
+
+思路:
+
+用一个小根堆表示被锁住的项目，堆顶表示需要资金最小的项目
+
+用一个大根堆表示解锁的项目，堆顶表示利润最大的项目
+
+3.
+
+
+
+### 补充:n皇后问题
+
+
+
+### 哈希函数与哈希表
+
+### KMP
+
+### Manacher算法
