--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -514,3 +514,102 @@ public int minMoves2(int[] nums) {
 核心思想是随机选择一个轴值，对于小于该轴值的数放在轴值左边，大于该轴值的数放在轴值右边,然后根据k和轴值的关系
 
 平均时间复杂度on 
+
+5.20 每日一题
+
+自己做:暴力
+
+```java
+class Solution {
+        public int[] findRightInterval(int[][] intervals) {
+        int n = intervals.length;
+        int[] ans = new int[n];
+        int temp = -1;
+        int minInterval = Integer.MAX_VALUE;
+        if (n == 1) {
+            ans[0] = -1;
+            return ans;
+        }
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                if (intervals[j][0] - intervals[i][1] < minInterval) {
+                    minInterval = intervals[j][0];
+                    temp = j;
+                }
+            }
+            ans[i] = temp;
+            minInterval=Integer.MAX_VALUE;
+        }
+        return ans;
+    }
+}
+```
+
+5.21
+
+每日一题(简单)
+
+
+
+98.验证二叉搜索树
+
+中序遍历
+
+1.递归实现
+
+出问题了
+
+```java
+    public boolean isValidBST(TreeNode root) {
+    if(root==null){
+        return true;
+    }
+    if(root.left!=null){
+        isValidBST(root.left);
+    }
+    if(this.val>this.left.val&&this.val<this.right.val){
+        return true;
+    }
+    if(root.right!=null){
+        isValidBST(root.right);
+    }
+    }
+```
+
+2.栈实现
+
+气死我了卡数值范围
+
+把pre改成Long.MIN_VALUE即可
+
+```java
+class Solution {
+       public boolean isValidBST(TreeNode root) {
+        if(root!=null) {
+            Stack<TreeNode> stack = new Stack<>();
+            long pre=Long.MIN_VALUE;
+            while(!stack.isEmpty() || root!=null){
+                if(root!=null){
+                    stack.add(root);
+                    root=root.left;
+                }else {
+                    root=stack.pop();
+                    if(root.val<=pre){
+                        return false;
+                    }else {
+                        pre=root.val;
+                    }
+                    root=root.right;
+                }
+            }
+        }
+        return true;
+    }
+}
+
+```
+
+
+
+3.递归套路
+
