提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -613,3 +613,113 @@ class Solution {
 
 3.递归套路
 
+
+
+292场周赛第二题
+
+统计值等于子树平均值的节点数
+
+![image-20220521172719000](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220521172719000.png)
+
+思路:从子树想父亲拓展，由子树的平均值算出父树的平均值，使用递归处理，比较难以解决的是子树的平均值如何转化到父亲的平均值:
+
+使用一个leftcnt记录左子树的节点数一个rightcnt右子树的结点数目，
+
+由于cnt是每个树自身特有的，所以定义在dfs中
+
+总结:还是代码能力不够，不能很好地在递归过程中动态处理数据.
+
+理解递归过程
+
+写一段代码
+
+```java
+class Solution {
+    int cnt=1;
+    int answer=0;
+
+    public int dfs(TreeNode head){
+        int ans=head.val;
+        if(head.left!=null){
+            ans+=dfs(head.left)*cnt;
+        }
+        if(head.right!=null){
+            ans+=dfs(head.right)*cnt;
+        }
+        if(ans/cnt==head.val){
+            answer+=1;
+        }
+        System.out.println(head.val+":" +ans+":"+cnt);
+        cnt+=1;
+        return ans/cnt;
+    }
+    public int averageOfSubtree(TreeNode root) {
+        int x = dfs(root);
+        return answer;
+
+    }
+
+    public static void main(String[] args) {
+        TreeNode treeNode1 = new TreeNode(4);
+        TreeNode treeNode2 = new TreeNode(8);
+        TreeNode treeNode3 = new TreeNode(0);
+        TreeNode treeNode4 = new TreeNode(1);
+        TreeNode treeNode5 = new TreeNode(5);
+        TreeNode treeNode6 = new TreeNode(6);
+        treeNode1.left=treeNode2;
+        treeNode2.left=treeNode3;
+        treeNode2.right=treeNode4;
+        treeNode1.right=treeNode5;
+        treeNode5.right=treeNode6;
+        Solution solution = new Solution();
+        solution.averageOfSubtree(treeNode1);
+
+    }
+}
+  class TreeNode {
+      int val;
+      TreeNode left;
+      TreeNode right;
+      TreeNode() {}
+      TreeNode(int val) { this.val = val; }
+      TreeNode(int val, TreeNode left, TreeNode right) {
+          this.val = val;
+          this.left = left;
+          this.right = right;
+      }
+ }
+```
+
+贪心问题:
+
+剑指offer103最少的硬币数
+
+![image-20220521222536218](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220521222536218.png)
+
+我开始做的贪心是能取最大面额就取最大面额，否则取较小的那一个，但是有一个漏洞，就是当硬币面额不是倍数关系时有时候明明能兑换但我误判了不能换.
+
+```java
+class Solution {
+    public int coinChange(int[] coins, int amount) {
+        int ans=0;
+        Arrays.sort(coins);
+        int i=coins.length-1;
+        while(i>=0){
+            if(coins[i]<=amount&&amount>=0){
+                ans++;
+                amount-=coins[i];
+            }else{
+                i--;
+            }
+        }
+        if(amount>0){
+            return -1;
+        }
+        return ans;
+    }
+}
+```
+
+错误案例
+
+![image-20220521222823585](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220521222823585.png)
