提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -867,7 +867,24 @@ public class Trie {
 
 我们逆向思维，让最后分割后的金条，任意两两组合，设置一个贪心策略让两两组合的金条总长度最小.
 
+使用一个小根堆，把所有数字加进去，每次弹出2个让他们相加加入到ans中并再次加入到小根堆中
 
+```java
+public static int lessMoney(int []arr){
+    PriorityQueue<Integer> pq = new PriorityQueue<>();
+    int cur;
+    int ans=0;
+    for(int x:arr){
+        pq.add(x);
+    }
+    while(!pq.isEmpty()){
+        cur=pq.poll()+pq.poll();
+        ans+=cur;
+        pq.add(cur);
+    }
+    return ans;
+}
+```
 
 
 
@@ -973,11 +990,15 @@ m表示你初始的资金
 
 
 
+
+
 ### 补充:n皇后问题
 
 
 
 ### 哈希函数与哈希表
+
+### 并查集
 
 ### KMP
 
