--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -723,3 +723,94 @@ class Solution {
 错误案例
 
 ![image-20220521222823585](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220521222823585.png)
+
+5.22
+
+周赛
+
+1.简单
+
+![image-20220522115504162](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115504162.png)
+
+```java
+class Solution {
+        public int percentageLetter(String s, char letter) {
+        int sum=0;
+        char[] chars = s.toCharArray();
+        for(char chr:chars){
+            if(chr==letter){
+                sum+=100;
+            }
+        }
+        return  sum/s.length();
+    }
+}
+
+```
+
+2.
+
+![image-20220522115539230](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115539230.png)
+
+思路:堆
+
+```java
+class Solution {
+        public int maximumBags(int[] capacity, int[] rocks, int additionalRocks) {
+        int sum=0;
+        PriorityQueue<Integer> pq = new PriorityQueue<>();
+        for (int i = 0; i < capacity.length; i++) {
+            pq.add(capacity[i]-rocks[i]);
+        }
+        while(!pq.isEmpty()&&pq.peek()<=additionalRocks&&additionalRocks>=0){
+            additionalRocks-=pq.poll();
+            sum++;
+        }
+        return sum;
+    }
+}
+```
+
+3.
+
+![image-20220522115605397](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115605397.png)
+
+思路:排序+双指针
+
+很可惜的是斜率可能为负数.
+
+```java
+class Solution {
+    public int minimumLines(int[][] stockPrices) {
+        int ans=0;
+        Arrays.sort(stockPrices,new mycomparator());
+        int l=stockPrices[0][0];
+        int r=0;
+        while(r<=stockPrices[stockPrices.length-1][0]){
+            r=l+1;
+            int cur=stockPrices[l+1][1]-stockPrices[l][1];
+            if((stockPrices[r][1]-stockPrices[l][1])/(r-l)==cur){
+                r++;
+            }else{
+                ans++;
+                l=r;
+            }
+        }
+        ans++;
+        return ans;
+    }
+}
+
+class mycomparator implements Comparator<int[]>{
+    @Override
+    public int compare(int[] o1, int[] o2) {
+        return o1[0]-o2[0];
+    }
+}
+```
+
+4.
+
+![image-20220522115641802](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115641802.png)
+
+超时
