提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -722,15 +722,13 @@ class Solution {
 
 错误案例
 
-![image-20220521222823585](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220521222823585.png)
-
 5.22
 
 周赛
 
 1.简单
 
-![image-20220522115504162](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115504162.png)
+![image-20220522121317415](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522121317415.png)
 
 ```java
 class Solution {
@@ -750,7 +748,7 @@ class Solution {
 
 2.
 
-![image-20220522115539230](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115539230.png)
+![image-20220522121349893](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522121349893.png)
 
 思路:堆
 
@@ -773,7 +771,7 @@ class Solution {
 
 3.
 
-![image-20220522115605397](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115605397.png)
+![image-20220522120723328](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522120723328.png)
 
 思路:排序+双指针
 
@@ -809,8 +807,26 @@ class mycomparator implements Comparator<int[]>{
 }
 ```
 
-4.
+大佬
 
-![image-20220522115641802](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522115641802.png)
+```java
+class Solution {
 
-超时
+	public int minimumLines(int[][] stockPrices) {
+		Arrays.sort(stockPrices, (o, p) -> o[0] - p[0]);
+		int count = 0;
+		for (int i = 1; i < stockPrices.length; i++) {
+			count += i > 1 && (long) (stockPrices[i][0] - stockPrices[i - 1][0]) * (stockPrices[i - 1][1]
+					- stockPrices[i - 2][1]) == (long) (stockPrices[i - 1][0] - stockPrices[i - 2][0])
+							* (stockPrices[i][1] - stockPrices[i - 1][1]) ? 0 : 1;
+		}
+		return count;
+	}
+}
+```
+
+
+
+3.
+
+![image-20220522120630615](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522120630615.png)
