提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -773,36 +773,43 @@ class Solution {
 
 ![image-20220522120723328](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522120723328.png)
 
+![image-20220522182545216](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522182545216.png)
+
 思路:排序+双指针
 
-很可惜的是斜率可能为负数.
+注意不能用斜率，斜率全部转化为相等.
 
 ```java
 class Solution {
-    public int minimumLines(int[][] stockPrices) {
+        public int minimumLines(int[][] stockPrices) {
+        if(stockPrices.length==1){
+            return 0;
+        }
         int ans=0;
         Arrays.sort(stockPrices,new mycomparator());
-        int l=stockPrices[0][0];
-        int r=0;
-        while(r<=stockPrices[stockPrices.length-1][0]){
-            r=l+1;
-            int cur=stockPrices[l+1][1]-stockPrices[l][1];
-            if((stockPrices[r][1]-stockPrices[l][1])/(r-l)==cur){
+        int l=0;
+        int r=1;
+        while(r<stockPrices.length){
+            int curx1=stockPrices[l+1][0]-stockPrices[l][0];
+            int cury1=stockPrices[l+1][1]-stockPrices[l][1];
+            int curx2=stockPrices[r][0]-stockPrices[l][0];
+            int cury2=stockPrices[r][1]-stockPrices[l][1];
+            if(curx1*cury2==curx2*cury1){
                 r++;
             }else{
                 ans++;
-                l=r;
+                l=r-1;
+                r=l+1;
             }
         }
         ans++;
         return ans;
     }
 }
-
-class mycomparator implements Comparator<int[]>{
+class mycomparator implements Comparator<int[]> {
     @Override
     public int compare(int[] o1, int[] o2) {
-        return o1[0]-o2[0];
+        return o1[0] - o2[0];
     }
 }
 ```
