提交笔记修改

--- a/算法/刷题/刷题5.14.md
+++ b/算法/刷题/刷题5.14.md
@@ -728,7 +728,7 @@ class Solution {
 
 1.简单
 
-![image-20220522121317415](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522121317415.png)
+![image-20220522182844393](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522182844393.png)
 
 ```java
 class Solution {
@@ -746,9 +746,7 @@ class Solution {
 
 ```
 
-2.
-
-![image-20220522121349893](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522121349893.png)
+2.![image-20220522182809356](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522182809356.png)
 
 思路:堆
 
@@ -836,4 +834,4 @@ class Solution {
 
 3.
 
-![image-20220522120630615](C:/Users/34488/AppData/Roaming/Typora/typora-user-images/image-20220522120630615.png)
+![image-20220522182725855](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220522182725855.png)
