提交笔记修改

--- a/数据结构/读书/左程云数据结构与算法.md
+++ b/数据结构/读书/左程云数据结构与算法.md
@@ -998,8 +998,194 @@ m表示你初始的资金
 
 ### 哈希函数与哈希表
 
+哈希表特点
+
 ### 并查集
 
-### KMP
+解决问题
+
+一个矩阵中只有0和1两种值，每个位置都可以和自己的上下左右四个位置相连，如果有一片1连在一起，这个部分叫做一个岛，求一个矩阵中有多少个岛
+
+思路:深度优先+感染函数infect
+
+```java
+public class island {
+    public static int countIsland(int[][]m){
+        int N=m.length;
+        int M=m[0].length;
+        int ans=0;
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < M; j++) {
+                if(m[i][j]==1){
+                    ans++;
+                    infect(m,i,j,N,M);
+                }
+            }
+        }
+    }
+    public static void infect(int[][]m,int i,int j,int N,int M){
+        //如果i,j,N,M越界则直接return
+        if(i<0||i>=N||j<0||j>M){
+            return;
+        }
+        m[i][j]=2;
+        infect(m,i-1,j,N,M);
+        infect(m,i+1,j,N,M);
+        infect(m,i,j-1,N,M);
+        infect(m,i,j+1,N,M);
+    }
+    return ans;
+}
+```
+
+使用并查集实现并行算法：
+
+并查集结构
+
+可以把一些数据放入一个集合,方法有
+
+isSameSet
+
+union
+
+时间复杂度都是o(1)级别.
+
+elementMap
+
+fatherMap//某个元素的父亲
+
+sizeMap//记录代表元素所在集合大小
+
+```java
+import java.util.HashMap;
+import java.util.List;
+import java.util.Stack;
+
+public class UnionFind {
+    public  class Element<V>{
+        public V value;
+
+        public Element(V value) {
+            this.value = value;
+        }
+    }
+    public class UnionFindSet<V>{
+        HashMap<V,Element<V>>elementMap;//记录每个值对应的element;
+        HashMap<Element<V>,Element<V>>fatherMap;//记录每个element对应的father
+        HashMap<Element<V>,Integer>sizeMap;//记录每个代表element对应的集合大小
+        public UnionFindSet(List<V>list){
+            elementMap=new HashMap<V,Element<V>>();
+            fatherMap=new HashMap<Element<V>,Element<V>>();
+            sizeMap=new HashMap<Element<V>,Integer>();
+            for(V value:list){
+                Element<V> element=new Element<V>(value);
+                elementMap.put(value,element);
+                fatherMap.put(element,element);
+                sizeMap.put(element,1);
+            }
+        }
+        //对内使用，用户不需要使用此方法
+        public Element<V> findHead(Element<V> element){
+            Stack<Element<V>> path = new Stack<>();
+            while(element!=fatherMap.get(element)){
+                path.add(element);
+                element=fatherMap.get(element);
+            }
+            //优化,寻找一次head之后直接在fatherMap中将father和son联系起来
+            while(!path.isEmpty()){
+                fatherMap.put(path.pop(),element);
+            }
+            return element;
+        }
+        public boolean isSameSet(V v1,V v2){
+            if(elementMap.containsKey(v1)&&elementMap.containsKey(v2)){
+                return (findHead(elementMap.get(v1))==findHead(elementMap.get(v2)));
+            }
+            //不在elementMap中直接return false
+            return false;
+        }
+        //将两个数字的集合合并,此代码写的丑陋,完全可以通过三目运算符记录size较大的那个element和size较小的那个element
+        public void union(V v1,V v2){
+            if(elementMap.containsKey(v1)&&elementMap.containsKey(v2)){
+                //比较两个集合的大小
+                Element<V>element1=elementMap.get(v1);
+                Element<V>element2=elementMap.get(v2);
+                Element<V> head1=findHead(element1);
+                Element<V> head2=findHead(element2);
+                if(sizeMap.get(head1)>sizeMap.get(head2)){
+                    fatherMap.put(element2,element1);
+                    sizeMap.put(head1,sizeMap.get(element1)+sizeMap.get(element2));
+                    sizeMap.remove(head2);
+                }else {
+                    fatherMap.put(element1,element2);
+                    sizeMap.put(head2,sizeMap.get(element1)+sizeMap.get(element2));
+                    sizeMap.remove(head1);
+                }
+            }
+        }
+    }
+
+}
+```
+
+使用并查集来解决并行问题
+
+思路:由一个点感染来的放在一个集合里面,然后考察边界情况，如果在边界上两个均为2，而且二者不在一个集合里面，则把ans--，并把两个集合合并.
+
+
+
+### KMP算法
+
+解决问题
+
+字符串str1和str2，str1是否包含str2,如果包含则返回str2在str1中开始的位置,如何做到时间复杂度o(N)完成.
+
+基本原理:
+
+1.使用一个数组记录每个字符之前的字符串的最长匹配长度，比如abc2abc最长匹配长度为3.
+
+2.使用双指针，p1指向第一个字符串，p2指向第二个字符串，如果字符相同,p1p2同时++,如果字符相同，则把p1跳到最长匹配长度处的位置,然后继续比较,如果最终都不满足，那就p2++
+
+代码实现:
 
 ### Manacher算法
+
+解决问题:
+
+基本原理:
+
+### 滑动窗口
+
+问题引入:
+
+
+
+### 单调栈
+
+
+
+### 二叉树的Morris遍历
+
+二叉树的递归套路
+
+t1:
+
+![image-20220523112154909](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523112154909.png)
+
+思路:
+
+
+
+t2:
+
+![image-20220523112135908](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523112135908.png)
+
+思路:
+
+
+
+二叉树的morris遍历
+
+解决问题:一种二叉树的遍历方式，利用大量的空指针使时间复杂度 o(n)空间复杂度o(1)
+
+遍历细节:![image-20220523112107174](https://raw.githubusercontent.com/lozijy/github_-/main/image-20220523112107174.png)
